remove mentions of community tier

--- a/docs/account.mdx
+++ b/docs/account.mdx
@@ -18,10 +18,8 @@ Accounts on different providers with matching emails are not automatically linke
 
 ## Account Tiers
 
-There are four Shuttle account tiers: Community, Pro, Growth, and Enterprise.
+There are three Shuttle account tiers: Pro, Growth, and Enterprise.
 Check the [Pricing page](https://www.shuttle.dev/pricing) for more information.
-
-Pro Trial is included by default at signup, find out more [here](https://www.shuttle.dev/pricing/pro-trial).
 
 ## API Key
 
