--- a/docs/scaling.mdx
+++ b/docs/scaling.mdx
@@ -28,7 +28,7 @@ The table below lists the available `instance_size` values, along with the corre
 
 | Instance Size | Value | vCPU | Memory (GB) | Account Tier |
 | --- | --- | --- | --- | --- |
-| **Basic** (default) | `xs` | 0.25 | 0.5 | Community+ |
+| **Basic** (default) | `xs` | 0.25 | 0.5 | Pro+ |
 | **Small** | `s` | 0.5 | 1 | Pro+ |
 | **Medium** | `m` | 1 | 2 | Pro+ |
 | **Large** | `l` | 2 | 4 | Pro+ |
