--- a/docs/telemetry/overview.mdx
+++ b/docs/telemetry/overview.mdx
@@ -14,17 +14,7 @@ To get started with telemetry in your Shuttle project, follow our [step-by-step 
 
 ## Available Telemetry
 
-### Community Tier - Container Metrics
-
-The Community tier provides essential container metrics to help you monitor your application's resource usage. You'll have access to key metrics across CPU, memory, network, and storage performance.
-
-For detailed information about specific metrics, see the [Default Platform Metrics](#default-platform-metrics) section below.
-
-### Pro & Growth Tiers - Everything
-
-Upgrade to Pro or Growth tier to unlock:
-
-1. **All Container Metrics** - Everything from the Community tier
+1. **All Container Metrics** - See the [Default Platform Metrics](#default-platform-metrics) section below
 2. **Application Metrics** - Track your application's behavior with [custom metrics](./custom-metrics)
 3. **Application Logs** - Export tracing events and logs (not stdout/stderr)
 4. **No Export Limits** - Send as much data as you need
