--- a/pricing/faq.mdx
+++ b/pricing/faq.mdx
@@ -6,10 +6,6 @@ icon: comment-dollar
 
 ## Common Pricing Questions
 
-**Is payment information required to start using Shuttle?**
-
-No, you can begin immediately with our Community tier without providing any payment information. You'll get a complete development environment with 512MB RAM and 0.25 vCPU to explore Shuttle and build your projects.
-
 **How does usage-based pricing work?**
 
 Base tiers include generous resource allocations. When you exceed these allocations, additional resources are available at fixed rates: database storage at \$0.12/GB,
@@ -17,10 +13,6 @@ build minutes at \$0.025/minute,
 and network egress at \$0.10/GB.
 
 ## Support
-
-**What is community support?**
-
-Community support provides access to our public help threads where you can get assistance from both the community and the Shuttle team. The Shuttle team will help when available, making this tier best suited for developers who are comfortable with self-service and community-based troubleshooting.
 
 **What is priority support?**
 
@@ -32,10 +24,6 @@ Dedicated support offers our highest level of service, combining all the benefit
 
 ## Plan Selection
 
-**When should I upgrade from Community to Pro?**
-
-Consider upgrading to Pro when you need reliable production hosting, want to deploy multiple projects, or require enhanced support. The key differences are reserved instances (instead of spot), more projects, and guaranteed support response times.
-
 **Is the Growth tier suitable for my team?**
 
 Growth tier is ideal when you need auto-scaling, multi-zone deployment, or team collaboration features. If you're running production workloads that require high availability or have multiple team members managing deployments, Growth provides the necessary tools and infrastructure.
@@ -44,6 +32,7 @@ Growth tier is ideal when you need auto-scaling, multi-zone deployment, or team 
 
 No, Shuttle is specifically designed for Rust applications. We provide native support for popular Rust frameworks like Axum, Actix-Web, and Rocket, delivering an optimized experience for Rust development.
 
+{/*
 ## Instance Types
 
 **What is the difference between a Spot Instance and a Reserved Instance?**
@@ -51,12 +40,13 @@ No, Shuttle is specifically designed for Rust applications. We provide native su
 A Spot Instance is a flexible, cost-effective option available on the Community tier that may be interrupted or terminated based on system demand. These instances run on shared infrastructure and are ideal for development and testing.
 
 A Reserved Instance, available on Pro tier and above, provides dedicated, guaranteed computing resources that won't be interrupted. These instances offer consistent performance and reliability, making them suitable for production workloads and applications that require high availability.
+*/}
 
 ## Resource Limits and Overages
 
 **What happens if I exceed my plan's resource limits?**
 
-We implement both soft and hard limits. You'll receive notifications when approaching soft limits, giving you time to upgrade or adjust usage. Hard limits are enforced on the community tier to maintain service quality. For resources like storage and build minutes, you'll be billed for additional usage at standard rates.
+We implement both soft and hard limits. You'll receive notifications when approaching soft limits, giving you time to upgrade or adjust usage. For resources like storage and build minutes, you'll be billed for additional usage at standard rates.
 
 **Can I set custom resource limits?**
 
