--- a/pricing/overview.mdx
+++ b/pricing/overview.mdx
@@ -9,11 +9,7 @@ Check out our [pricing page](https://www.shuttle.dev/pricing) for a detailed com
 
 ## Choosing a Plan
 
-Shuttle offers four distinct tiers designed to support developers and teams at every stage of their journey. Here's a detailed guide to help you choose the right plan for your needs.
-
-### Community
-
-The Community tier is free and perfect for getting started with Shuttle. It provides the core features needed for learning Rust, building personal projects, or experimenting with new ideas. You get one project with essential compute resources, a starter database, and custom domain support—everything needed to build and deploy hobby applications or proof-of-concepts.
+Shuttle offers tiers designed to support developers and teams at every stage of their journey. Here's a detailed guide to help you choose the right plan for your needs.
 
 ### Pro
 
