--- a/docs/account.mdx
+++ b/docs/account.mdx
@@ -45,7 +45,7 @@ This action will soon be made possible on the Account settings page.
 <Info>
 We're sunsetting the Community tier on Shuttle.
 
-On Friday 19th, 2025 at 12:00 GMT (UTC+0), all projects on the Community tier will be automatically stopped.
+On Friday December 19th, 2025 at 12:00 GMT (UTC+0), all projects on the Community tier will be automatically stopped.
 
 To keep your projects running, please upgrade to Pro. You can also upgrade at any time after Friday to re-deploy your projects.
 
