chore: sunset community tier (#363)
* remove mentions of community tier

* another

* sunset

* dec

--- a/docs/account.mdx
+++ b/docs/account.mdx
@@ -18,10 +18,8 @@ Accounts on different providers with matching emails are not automatically linke
 
 ## Account Tiers
 
-There are four Shuttle account tiers: Community, Pro, Growth, and Enterprise.
+There are three Shuttle account tiers: Pro, Growth, and Enterprise.
 Check the [Pricing page](https://www.shuttle.dev/pricing) for more information.
-
-Pro Trial is included by default at signup, find out more [here](https://www.shuttle.dev/pricing/pro-trial).
 
 ## API Key
 
@@ -41,3 +39,17 @@ You can also use `shuttle logout --reset-api-key` followed by `shuttle login`.
 To delete your Shuttle account, reach out to [support@shuttle.dev](mailto:support@shuttle.dev).
 
 This action will soon be made possible on the Account settings page.
+
+## Community Tier Sunset
+
+<Info>
+We're sunsetting the Community tier on Shuttle.
+
+On Friday December 19th, 2025 at 12:00 GMT (UTC+0), all projects on the Community tier will be automatically stopped.
+
+To keep your projects running, please upgrade to Pro. You can also upgrade at any time after Friday to re-deploy your projects.
+
+Project data, such as contents of the Shared Database, will not be deleted. Refer to [this page](/guides/migrate-shared-postgres) if you want to migrate data.
+
+Thank you for building with Shuttle.
+</Info>
